--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -20,7 +20,7 @@
 \polishtitle    {Szybki vector z mremap}
 \englishtitle   {Fast vector with mremap}
 \polishabstract {W języku C++ jedną z najczęściej używanych struktur danych jest wektor, który jest rozwinięciem tablic dynamicznych stosowanych w C. Oprócz automatycznego zarządzania pamięcią, pozwala on na dynamiczne zwiększanie rozmiaru trzymanej tablicy, realokując trzymany blok pamięci kiedy jest to wymagane. Implementacja tej struktury znajdująca się w bibliotece standardowej ({\it std::vector}) wykonuje tą realokacje wykorzystując schemat {\it allocate, move, deallocate}. Jednak wykorzystując interfejs wywołania systemowego {\it mremap}\cite{mremap} można sprawdzić czy system operacyjny nie byłby w stanie rozszerzyć danego bloku pamięci w miejscu, co pozwoliłoby pominąć cały proces realokacji. {\it Mremap} pozwala także na realokację obszaru pamięci w czasie stałym poprzez zmianę mapowania adresu wirtualnego na fizyczny. Jeśli typ danych w wektorze jest trywialnie przenoszony, to można wykorzystać tą możliwość do szybkiej realokacji bloku pamięci w wektorze. Tę optymalizację oraz kilka innych, zawiera napisany przeze mnie {\it rvector}.}
-\englishabstract{In C++ one of the most commonly used data structure is vector, which is a wrapper of dynamicly allocated arrays used in C. Aside from automatic memory management, it allows to dynamicly increase size of held array, with reallocation of contained memory block when it is required. STL implementation of this data structure ({\it std::vector}) executes this reallocation utilizing scheme {\it allocate, move, deallocate}. However, by using syscall {\it mremap}\cite{mremap} it is possible to check whether operating system could expand specified memory block in place, which would allow to omit whole reallocation process. {\it Mremap} may be also used to reallocate memory block in constant time by changing virtual address mapping. It can be used to quickly reallocate memory block of trivially moveable objects.  My implementation of vector {\it rvector} contains that and few other optimizations.}
+\englishabstract{In C++ one of the most commonly used data structure is vector, which is a wrapper of dynamically allocated arrays used in C. Aside from automatic memory management, it allows to dynamically increase size of held array, with reallocation of contained memory block when it is required. STL implementation of this data structure ({\it std::vector}) executes this reallocation utilizing scheme {\it allocate, move, deallocate}. However, by using syscall {\it mremap}\cite{mremap} it is possible to check whether operating system could expand specified memory block in place, which would allow to omit whole reallocation process. {\it Mremap} may be also used to reallocate memory block in constant time by changing virtual address mapping. It can be used to quickly reallocate memory block of trivially movable objects.  My implementation of vector {\it rvector} contains that and few other optimizations.}
 % w pracach wielu autorow nazwiska mozna oddzielic poleceniem \and
 \author         {Wojciech Oziębły}
 % w przypadku kilku promotorow, lub koniecznosci podania ich afiliacji, linie
@@ -85,22 +85,22 @@
 
 \chapter{Vector data structure}
 
-Vector is the most commonly used and general data structure in C++. Its purpuse is simple, management of continous dynamic array of objects. Because of its universal use and general applicability, vector is required to be fast, memory efficient and reliable. It is supposed to work great as a container for billions of int objects, as well as for few big abstract objects. As almost all software written in C++ relies heavily on vectors, efficient implementation of this data structure is highly desirable.
+Vector is the most commonly used and general data structure in C++. Its purpose is simple, management of continuous dynamic array of objects. Because of its universal use and general applicability, vector is required to be fast, memory efficient and reliable. It is supposed to work great as a container for billions of int objects, as well as for few big abstract objects. As almost all software written in C++ relies heavily on vectors, efficient implementation of this data structure is highly desirable.
 \\
-Vector stores all objects in a continous memory block, which allows constant time access to its elements. It allows to dynamically add and erase elements, with storage being automatically expanded when needed. To do it efficiently, capacity of vector is often greater than actual amount of stored elements. Key parameter in any vector implementation is {\it growth factor}, which defines expansion rate of capacity when an additional memory is required. The most common value of growth factor is 2. With such allocation strategy, adding element to the back of vector is amortized constant time. Yet, as the reallocation process is often very costly, it renders vector not suitable for certain tasks, e.g. realtime systems. 
+Vector stores all objects in a continuous memory block, which allows constant time access to its elements. It allows to dynamically add and erase elements, with storage being automatically expanded when needed. To do it efficiently, capacity of vector is often greater than actual amount of stored elements. Key parameter in any vector implementation is {\it growth factor}, which defines expansion rate of capacity when an additional memory is required. The most common value of growth factor is 2. With such allocation strategy, adding element to the back of vector is amortized constant time. Yet, as the reallocation process is often very costly, it renders vector not suitable for certain tasks, e.g. real-time systems. 
 
 \chapter{Common vector implementations}
 \section{std::vector}
-In my benchmarks I have used libstdc++ implementation\cite{std::vector_impl} of std::vector. With default allocator, all allocation are done with {\it operator new} and deallocations with {\it operator delete}. Reallocation is done using scheme {\it allocate, move, deallocate}, where {\it allocate} and {\it  deallocate} phases are done by a given allocator. Growth factor is constant and is equal 2.
+In my benchmarks I have used {\it libstdc++} implementation\cite{std::vector_impl} of std::vector. With default allocator, all allocation are done with {\it operator new} and deallocations with {\it operator delete}. Reallocation is done using scheme {\it allocate, move, deallocate}, where {\it allocate} and {\it  deallocate} phases are done by a given allocator. Growth factor is constant and is equal 2.
 
 \section{folly::fbvector}
-{\it Folly::fbvector}\cite{folly::fbvector_impl} is a part of {\it folly} library developed by Facebook. It has similiar interface for allocator to {\it std::vector}, yet by default it utilizes jemalloc for allocations, deallocations and reallocations\cite{folly::fbvector_description}. It is worth noting that {\it folly::fbvector} utilizes {\it jemalloc xallocx} function, which tries to reallocate memory in place. Growth factor depends on size of current array. Initial growth is to at least 64 bytes, probably to fill whole cache line. For non in place reallocations (small ones) and big memory blocks (at least 4096 * 32 bytes) growth factor is equal 2. Otherwise growth factor is equal 1.5, as it allows to reuse previously allocated memory. {\it Folly::fbvector} developers believe that such strategy is more memory friendly and efficient\cite{folly::fbvector_description}. Additionaly {\it folly::fbvector} uses {\it memcpy} to move objects with type decorated by {\it folly::IsRelocatable}.
+{\it Folly::fbvector}\cite{folly::fbvector_impl} is a part of {\it folly} library developed by Facebook. It has similar interface for allocator to {\it std::vector}, yet by default it utilizes {\it jemalloc} for allocations, deallocations and reallocations\cite{folly::fbvector_description}. It is worth noting that {\it folly::fbvector} utilizes {\it jemalloc xallocx} function, which tries to reallocate memory in place. Growth factor depends on size of current array. Initial growth is to at least 64 bytes, probably to fill whole cache line. For non in place reallocations (small ones) and big memory blocks (at least 4096 * 32 bytes) growth factor is equal 2. Otherwise growth factor is equal 1.5, as it allows to reuse previously allocated memory. {\it Folly::fbvector} developers believe that such strategy is more memory friendly and efficient\cite{folly::fbvector_description}. Additionally {\it folly::fbvector} uses {\it memcpy} to move objects with type decorated by {\it folly::IsRelocatable}.
 
 \section{boost::container::vector}
-{\it Boost::container::vector}\cite{boost::container::vector_impl} is the least specialized version of vector in {boost::container}. It has lower exception guarantees in order to improve performance of container\cite{boost_exceptions}. As a default allocator it uses boost version of dlmalloc\cite{dlmalloc}, which allows {\it boost::container::vector} to expand memory block forward as well as backward. To achive this, allocator stores chain of allocations instead of single allocation block. Growth factor by default is equal 1.5, but it is possible to change its value at compilation time. In my opinion {\it boost::container::vector} has the most complex implementation out of those presented in this chapter.
+{\it Boost::container::vector}\cite{boost::container::vector_impl} is the least specialized version of vector in {boost::container}. It has lower exception guarantees in order to improve performance of container\cite{boost_exceptions}. As a default allocator it uses boost version of dlmalloc\cite{dlmalloc}, which allows {\it boost::container::vector} to expand memory block forward as well as backward. To achieve this, allocator stores chain of allocations instead of single allocation block. Growth factor by default is equal 1.5, but it is possible to change its value at compilation time. In my opinion {\it boost::container::vector} has the most complex implementation out of those presented in this chapter.
 
 \section{eastl::vector}
-{\it Eastl::vector}\cite{eastl::vector_impl} is part of Electronic Arts Standard Template Library (EASTL) developed by Electronic Arts compoany. EASTL was designed especially as a game development library. It is considered to be more suited for console platforms\cite{eastl_faq} than other STL implementations. Default allocator in EASTL requires from user to define global {\it eastl} version of {\it operator new} that would be used for allocations. In my benchmarks I defined it to use standard version of {\it operator new}. {\it Eastl::vector} implementation is simple and similiar to {\it std::vector} one, it also utlizes {\it allocate, move, deallocate} scheme. Yet it contains only EASTL version of STL functions. Growth factor is constant and is equal 2.  
+{\it Eastl::vector}\cite{eastl::vector_impl} is part of Electronic Arts Standard Template Library (EASTL) developed by Electronic Arts company. EASTL was designed especially as a game development library. It is considered to be more suited for console platforms\cite{eastl_faq} than other STL implementations. Default allocator in EASTL requires from user to define global {\it eastl} version of {\it operator new} that would be used for allocations. In my benchmarks I defined it to use standard version of {\it operator new}. {\it Eastl::vector} implementation is simple and similar to {\it std::vector} one, it also utilizes {\it allocate, move, deallocate} scheme. Yet it contains only EASTL version of STL functions. Growth factor is constant and is equal 2.  
 
 
 \chapter{Rvector implementation}
@@ -119,7 +119,7 @@ T* allocate(size_type n) {
     	return (T*) malloc(n*sizeof(T));
 }
 \end{lstlisting}
-In {\it rvector} array handling depends on element type traits. Especially important is whether certain type is trivially moveable or not. To achive compilation time dispatching I have used SFINAE features with such policies:
+In {\it rvector} array handling depends on element type traits. Especially important is whether certain type is trivially movable or not. To achieve compilation time dispatching I have used SFINAE feature with such policies:
 
 \begin{lstlisting}[caption=SFINAE policies]
 template<typename T, typename R = void>
@@ -129,7 +129,7 @@ template<typename T, typename R = void>
 using NT_Move = std::enable_if_t<
 				!std::is_trivially_move_constructible<T>::value, R>;
 \end{lstlisting}
-{\it Rvector} uses {\it mremap} in two diffrent ways. For trivially moveable types, MREMAP\_MAYMOVE flag is passed, which allows {\it mremap} to reallocate memory block to other address. Because it {\it mremap} does reallocation by changing page table mapping from virtual address to memory page\cite{mremap}, it is done in constant time, and thanks to MREMAP\_MAYMOVE flag this reallocation is always succesful. 
+{\it Rvector} uses {\it mremap} in two different ways. For trivially movable types, MREMAP\_MAYMOVE flag is passed, which allows {\it mremap} to reallocate memory block to other address. Because it {\it mremap} does reallocation by changing page table mapping from virtual address to memory page\cite{mremap}, it is done in constant time, and thanks to MREMAP\_MAYMOVE flag this reallocation is always successful. 
 
 \begin{lstlisting}[caption=rvector trivial type reallocation]
 template<typename T>
@@ -153,7 +153,7 @@ T_Move<T, T*> realloc_(T* data,
     }
 }
 \end{lstlisting}
-For nontrivially moveable types, MREMAP\_MAYMOVE cannot be used. Without this flag {\it mremap} tries to expand memory block in place. This operation may fail, when there is not enough space in front of provided address. In that case standard reallocation is done.
+For non-trivially movable types, MREMAP\_MAYMOVE cannot be used. Without this flag {\it mremap} tries to expand memory block in place. This operation may fail, when there is not enough space in front of provided address. In that case standard reallocation is done.
 
 \begin{lstlisting}[caption=rvector nontrivial type reallocation]
 template<typename T>
@@ -238,9 +238,11 @@ TestType& operator =
 ...
 };
 \end{lstlisting}
-Tests consider trivially and nontrivially moveable types, and small (malloc allocations) and big (mmap allocations) sizes, to check all branches of {\it rvector} memory handling.
+Tests consider trivially and non-trivially movable types, and small ({\it malloc} allocations) and big ({\it mmap} allocations) sizes, to check all branches of {\it rvector} memory handling.
 
 \chapter{Benchmarks environment}
+\section{System environment}
+All tests have been performed on Intel(R) Core(TM) i7-6500U CPU @ 2.50GHz processor, with 8GB of RAM. Operating system: Ubuntu 16.04.5 LTS, kernel version Linux 4.4.0-141-generic. Compiler used was g++ 7.4.0, with optimization level: -O3.
 \section{VectorEnv}
 In order to benchmark vectors in complex, more realistic situations I have designed vector benchmark environment template.
 
@@ -285,7 +287,7 @@ void construct_action() {
 	}
 }
 \end{lstlisting}
-Construct action creates few small vectors. Elements are emplaced one by one in order to check speed of small memory block reallocations. 
+Construct action creates few small vectors. Elements are {\it emplaced} one by one in order to check speed of small memory block reallocations. 
 
 \item [push\_back action]
 \begin{lstlisting}[caption=push\_back action]
@@ -313,7 +315,7 @@ void push_back_action() {
 	}
 }
 \end{lstlisting}
-Adds many elements (up to 100000) to part of environment (up to 1/3 with replacament). Other actions randomize the process in similar manner.
+Adds many elements (up to 100000) to part of environment (up to 1/3 with replacement). Other actions randomize the process in similar manner.
 
 \item [pop\_back action]
 Pops elements (up to size of picked vector) of part of environment (up to 1/3 with replacement). 
@@ -345,16 +347,22 @@ void experiment(std::string name,
 		...
 }
 \end{lstlisting}
-For each tested vector implementation I have run experiment function with few different element types (Ts...). After gathering resaults for certain iteration count, maximum one is deleted in order to reduce variance.
-
+For each tested vector implementation I have run experiment function with few different element types (Ts...). 
 
 \begin{figure}[h!]
 \caption{Needed space consumption for element types \lstinline{int, std::string, std::array<int, 10>} [bytes]}
 \label{space_consumption}
-\includegraphics{length_<std::string,int,std::array<int,10>>}
+\includegraphics{plots/capacity_<std::string,int,std::array<int,10>>}
 \end{figure}
 
-As it can be seen on Figure \ref{space_consumption} average number of bytes needed for environment (sum of lengths of vectors) is increasing with iterations. Benchmarks with more iterations will show vector operations effieciency on larger arrays and more fragmented memory.
+\begin{figure}[h!]
+\caption{Maximum vector length for element types \lstinline{int, std::string, std::array<int, 10>} [bytes]}
+\label{vector_length}
+\includegraphics{plots/length_<std::string,int,std::array<int,10>>}
+\end{figure}
+
+
+As it can be seen on Figure \ref{space_consumption} average number of bytes needed for environment (sum of lengths of vectors) is increasing with iterations. Maximum length of single vector stabilizes after few hundred iterations \ref{vector_length}. Benchmarks with more iterations will show vector operations efficiency on more fragmented memory, as the total number of vectors is increasing.
 
 \chapter{Benchmarks results}
 
@@ -389,7 +397,7 @@ It turns out that {\it folly::fbvector} and {\it boost::container::vector} imple
 \includegraphics{plots/int_copy_constrained}
 \end{figure}
 
-{\it Rvector} falls behing other implementation at copy action benchmark as it can be seen at Figure \ref{int_copy}. As for \lstinline{int} element type (and all other trivially copyable types), copy constructor is equivalent to single allocation and memcpy. During benchmarks {\it rvector} mainly uses mmap to allocate memory block for copy, which is much slower that allocation with other memory managers. Figure \ref{int_copy_constrained} shows that {\it rvector} is as fast as other vectors when it does not use mmap to allocate memory for copy, because size of copy is constrained to 400 bytes.
+{\it Rvector} falls behind other implementation at copy action benchmark as it can be seen at Figure \ref{int_copy}. As for \lstinline{int} element type (and all other trivially copyable types), copy constructor is equivalent to single allocation and {\it memcpy}. During benchmarks {\it rvector} mainly uses {\it mmap} to allocate memory block for copy, which is much slower that allocation with other memory managers. Figure \ref{int_copy_constrained} shows that {\it rvector} is as fast as other vectors when it does not use {\it mmap} to allocate memory for copy, because size of copy is constrained to 400 bytes.
 
 \begin{figure}[h!]
 \caption{Push\_back operation time for element type \lstinline{int}}
@@ -397,7 +405,7 @@ It turns out that {\it folly::fbvector} and {\it boost::container::vector} imple
 \includegraphics{plots/int_push_back}
 \end{figure}
 
-{\it Rvector} did better that other vectors at push\_back action benchmark, yet difference is not as big as for other element types. Because vectors did not operate on big memory blocks, even at large number of elements, reallocation optimalizations did not induce much speed up.
+{\it Rvector} did better that other vectors at push\_back action benchmark, yet difference is not as big as for other element types. Because vectors did not operate on big memory blocks, even at large number of elements, reallocation optimizations did not induce much speed up.
 
 \begin{figure}[h!]
 \caption{Total simulation time for element type \lstinline{int}}
@@ -427,7 +435,7 @@ In order to benchmark vectors on big and trivial objects, I have used as \lstinl
 TestType class have been defined in Listing \ref{TestType_impl}. It is not trivial and its move constructor is significantly faster than copy constructor, as it does not allocate memory. In this benchmark  {\it rvector} will try to expand memory in place using {\it mremap} without MREMAP\_MAYMOVE flag. On the one hand, fast reallocation will not occur always, as it did with trivial types. On the other hand, normal reallocations are more expensive, because objects must be moved with their move or copy constructors, not with simple {\it memcpy}.
 
 \begin{figure}[h!]
-\caption{Push\_back action time for element type \lstinline{TestType}}
+\caption{Total simulation time for element type \lstinline{TestType}}
 \label{TestType_push_back}
 \includegraphics{plots/TestType_Simulation}
 \end{figure}
@@ -436,7 +444,7 @@ It turns out that gain from {\it mremap} is not as significant as for \lstinline
 \\
 
 
-As for construct action, {\it rvector} got much worse results that all other vectors. Using a profiler I found out that {\it malloc} functions called by {\it rvector} needed around 60\% more CPU cycles to finish than for {\it std::vector} calls. On the other hand {\it rvector} did significantly better on copy action. I assumed that such behaviour must be connected with use of {\it mmap}. To test this hypothesis I benchmarked {\it rvector} with {\it mmap/mremap} optimization turned off. Results of construct and copy action on such setup can be seen of Figures \ref{TestType_construct_malloc} and \ref{TestType_copy_malloc} respectively. 
+As for construct action, {\it rvector} got much worse results that all other vectors. Using a profiler I found out that {\it malloc} functions called by {\it rvector} needed around 60\% more CPU cycles to finish than for {\it std::vector} calls. On the other hand {\it rvector} did significantly better on copy action. I assumed that such behavior must be connected with use of {\it mmap}. To test this hypothesis I benchmarked {\it rvector} with {\it mmap/mremap} optimization turned off. Results of construct and copy action on such setup can be seen of Figures \ref{TestType_construct_malloc} and \ref{TestType_copy_malloc} respectively. 
 \begin{figure}[h!]
 \caption{Push\_back action time for element type \lstinline{TestType}}
 \label{TestType_push_back}
@@ -474,6 +482,43 @@ As for construct action, {\it rvector} got much worse results that all other vec
 \includegraphics{plots/TestType_copy_malloc}
 \end{figure}
 
+\section{Element types: std::string, int, std::array}
+In this benchmark 3 different element types has been tested at the same moment. It makes this benchmark the most computational heavy and memory consuming of all benchmarks presented in this paper. Single simulation in a peak moment had a working space of around 14GB. As it is more than available physical memory,  simulation show results of vector during {\it throttling}.
+
+\begin{figure}[h!]
+\caption{Total simulation time for element types \lstinline{std::string, int, std::array}}
+\label{general_simulation}
+\includegraphics{plots/general_Simulation}
+\end{figure}
+
+As it can be seen of Figure \ref{general_simulation}, {\it rvector} gets significant advantage over other vector implementations. Every action except construct is done faster with {\it rvector}, which can be seen on the plots below. It is worth noting that even such actions as erase and pop\_back, that do not induce reallocation, took less time to execute with use of {\it rvector}. 
+
+\begin{figure}[h!]
+\caption{Push\_back action time for element types \lstinline{std::string, int, std::array}}
+\label{general_push_back}
+\includegraphics{plots/general_push_back}
+\end{figure}
+
+\begin{figure}[h!]
+\caption{Copy action time for element types \lstinline{std::string, int, std::array}}
+\label{general_copy}
+\includegraphics{plots/general_copy}
+\end{figure}
+
+\begin{figure}[h!]
+\caption{Erase action time for element types \lstinline{std::string, int, std::array}}
+\label{general_erase}
+\includegraphics{plots/general_erase}
+\end{figure}
+
+\begin{figure}[h!]
+\caption{Construct action time for element types \lstinline{std::string, int, std::array}}
+\label{general_construct}
+\includegraphics{plots/general_construct}
+\end{figure}
+
+\chapter{Conclusions}
+Considering results from benchmarks on small and large POD types, one can conclude that gain from using {\it mremap} as reallocation is more significant with greater memory block to be reallocated. It also the case for non-POD types, yet advantage is drastically lower. Surprisingly {\it rvector} turned out to be much more effective when memory resources are running low. It is also worth noting that even though {\it rvector} has much simpler implementation than other considered vectors, it did not fall greatly behind on benchmark when it's main optimizations were turned off.
 
 
 %%%%% BIBLIOGRAFIA
